[sonar][issues - *] [V03]: Se corrigen varías issues.